--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-20</td>
 <td style="text-align: left;">27,058</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">272,390</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-19</td>
 <td style="text-align: left;">26,318</td>
 <td style="text-align: left;">740</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-13</td>
-<td style="text-align: left;">21,019</td>
-<td style="text-align: left;">6,039</td>
-<td style="text-align: left;">513</td>
-<td style="text-align: left;">327</td>
-<td style="text-align: left;">199,767</td>
+<td style="text-align: left;">2020-04-14</td>
+<td style="text-align: left;">21,629</td>
+<td style="text-align: left;">5,429</td>
+<td style="text-align: left;">585</td>
+<td style="text-align: left;">255</td>
+<td style="text-align: left;">206,537</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-06</td>
-<td style="text-align: left;">13,629</td>
-<td style="text-align: left;">13,429</td>
-<td style="text-align: left;">254</td>
-<td style="text-align: left;">586</td>
-<td style="text-align: left;">124,726</td>
+<td style="text-align: left;">2020-04-07</td>
+<td style="text-align: left;">14,747</td>
+<td style="text-align: left;">12,311</td>
+<td style="text-align: left;">296</td>
+<td style="text-align: left;">544</td>
+<td style="text-align: left;">138,262</td>
 </tr>
 </tbody>
 </table>
