--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-21</td>
+<td style="text-align: left;">27,495</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">856</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">277,685</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-20</td>
 <td style="text-align: left;">27,058</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">437</td>
 <td style="text-align: left;">840</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">16</td>
 <td style="text-align: left;">272,390</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-19</td>
-<td style="text-align: left;">26,318</td>
-<td style="text-align: left;">740</td>
-<td style="text-align: left;">791</td>
-<td style="text-align: left;">49</td>
-<td style="text-align: left;">261,342</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-14</td>
 <td style="text-align: left;">21,629</td>
-<td style="text-align: left;">5,429</td>
+<td style="text-align: left;">5,866</td>
 <td style="text-align: left;">585</td>
-<td style="text-align: left;">255</td>
+<td style="text-align: left;">271</td>
 <td style="text-align: left;">206,537</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-07</td>
 <td style="text-align: left;">14,747</td>
-<td style="text-align: left;">12,311</td>
+<td style="text-align: left;">12,748</td>
 <td style="text-align: left;">296</td>
-<td style="text-align: left;">544</td>
+<td style="text-align: left;">560</td>
 <td style="text-align: left;">138,262</td>
 </tr>
 </tbody>
