--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-21</td>
 <td style="text-align: left;">27,869</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">282,942</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-20</td>
 <td style="text-align: left;">27,058</td>
 <td style="text-align: left;">811</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-14</td>
-<td style="text-align: left;">21,629</td>
-<td style="text-align: left;">6,240</td>
-<td style="text-align: left;">585</td>
-<td style="text-align: left;">299</td>
-<td style="text-align: left;">206,537</td>
+<td style="text-align: left;">2020-04-15</td>
+<td style="text-align: left;">22,521</td>
+<td style="text-align: left;">5,348</td>
+<td style="text-align: left;">627</td>
+<td style="text-align: left;">257</td>
+<td style="text-align: left;">214,210</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-07</td>
-<td style="text-align: left;">14,747</td>
-<td style="text-align: left;">13,122</td>
-<td style="text-align: left;">296</td>
-<td style="text-align: left;">588</td>
-<td style="text-align: left;">138,262</td>
+<td style="text-align: left;">2020-04-08</td>
+<td style="text-align: left;">15,698</td>
+<td style="text-align: left;">12,171</td>
+<td style="text-align: left;">323</td>
+<td style="text-align: left;">561</td>
+<td style="text-align: left;">143,580</td>
 </tr>
 </tbody>
 </table>
