--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-22</td>
+<td style="text-align: left;">28,309</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">910</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">289,218</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-21</td>
 <td style="text-align: left;">27,869</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">440</td>
 <td style="text-align: left;">884</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">26</td>
 <td style="text-align: left;">282,942</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-20</td>
-<td style="text-align: left;">27,058</td>
-<td style="text-align: left;">811</td>
-<td style="text-align: left;">840</td>
-<td style="text-align: left;">44</td>
-<td style="text-align: left;">272,390</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-15</td>
 <td style="text-align: left;">22,521</td>
-<td style="text-align: left;">5,348</td>
+<td style="text-align: left;">5,788</td>
 <td style="text-align: left;">627</td>
-<td style="text-align: left;">257</td>
+<td style="text-align: left;">283</td>
 <td style="text-align: left;">214,210</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-08</td>
 <td style="text-align: left;">15,698</td>
-<td style="text-align: left;">12,171</td>
+<td style="text-align: left;">12,611</td>
 <td style="text-align: left;">323</td>
-<td style="text-align: left;">561</td>
+<td style="text-align: left;">587</td>
 <td style="text-align: left;">143,580</td>
 </tr>
 </tbody>
