--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-23</td>
 <td style="text-align: left;">29,648</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">301,721</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-22</td>
 <td style="text-align: left;">28,576</td>
 <td style="text-align: left;">1,072</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-16</td>
-<td style="text-align: left;">23,353</td>
-<td style="text-align: left;">6,295</td>
-<td style="text-align: left;">681</td>
-<td style="text-align: left;">325</td>
-<td style="text-align: left;">224,459</td>
+<td style="text-align: left;">2020-04-17</td>
+<td style="text-align: left;">24,755</td>
+<td style="text-align: left;">4,893</td>
+<td style="text-align: left;">739</td>
+<td style="text-align: left;">267</td>
+<td style="text-align: left;">240,604</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-09</td>
-<td style="text-align: left;">16,826</td>
-<td style="text-align: left;">12,822</td>
-<td style="text-align: left;">371</td>
-<td style="text-align: left;">635</td>
-<td style="text-align: left;">156,852</td>
+<td style="text-align: left;">2020-04-10</td>
+<td style="text-align: left;">17,968</td>
+<td style="text-align: left;">11,680</td>
+<td style="text-align: left;">419</td>
+<td style="text-align: left;">587</td>
+<td style="text-align: left;">165,686</td>
 </tr>
 </tbody>
 </table>
