--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-24</td>
 <td style="text-align: left;">30,533</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">319,619</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-23</td>
 <td style="text-align: left;">29,648</td>
 <td style="text-align: left;">885</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-17</td>
-<td style="text-align: left;">24,755</td>
-<td style="text-align: left;">5,778</td>
-<td style="text-align: left;">739</td>
-<td style="text-align: left;">327</td>
-<td style="text-align: left;">240,604</td>
+<td style="text-align: left;">2020-04-18</td>
+<td style="text-align: left;">25,494</td>
+<td style="text-align: left;">5,039</td>
+<td style="text-align: left;">765</td>
+<td style="text-align: left;">301</td>
+<td style="text-align: left;">251,969</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-10</td>
-<td style="text-align: left;">17,968</td>
-<td style="text-align: left;">12,565</td>
-<td style="text-align: left;">419</td>
-<td style="text-align: left;">647</td>
-<td style="text-align: left;">165,686</td>
+<td style="text-align: left;">2020-04-11</td>
+<td style="text-align: left;">18,494</td>
+<td style="text-align: left;">12,039</td>
+<td style="text-align: left;">438</td>
+<td style="text-align: left;">628</td>
+<td style="text-align: left;">173,187</td>
 </tr>
 </tbody>
 </table>
