--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-25</td>
+<td style="text-align: left;">30,839</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,075</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">333,682</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-24</td>
 <td style="text-align: left;">30,533</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">306</td>
 <td style="text-align: left;">1,066</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">9</td>
 <td style="text-align: left;">319,619</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-23</td>
-<td style="text-align: left;">29,648</td>
-<td style="text-align: left;">885</td>
-<td style="text-align: left;">1,006</td>
-<td style="text-align: left;">60</td>
-<td style="text-align: left;">301,721</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-18</td>
 <td style="text-align: left;">25,494</td>
-<td style="text-align: left;">5,039</td>
+<td style="text-align: left;">5,345</td>
 <td style="text-align: left;">765</td>
-<td style="text-align: left;">301</td>
+<td style="text-align: left;">310</td>
 <td style="text-align: left;">251,969</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-11</td>
 <td style="text-align: left;">18,494</td>
-<td style="text-align: left;">12,039</td>
+<td style="text-align: left;">12,345</td>
 <td style="text-align: left;">438</td>
-<td style="text-align: left;">628</td>
+<td style="text-align: left;">637</td>
 <td style="text-align: left;">173,187</td>
 </tr>
 </tbody>
