--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-25</td>
 <td style="text-align: left;">30,839</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">333,682</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-24</td>
 <td style="text-align: left;">30,533</td>
 <td style="text-align: left;">306</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-18</td>
-<td style="text-align: left;">25,494</td>
-<td style="text-align: left;">5,345</td>
-<td style="text-align: left;">765</td>
-<td style="text-align: left;">310</td>
-<td style="text-align: left;">251,969</td>
+<td style="text-align: left;">2020-04-19</td>
+<td style="text-align: left;">26,318</td>
+<td style="text-align: left;">4,521</td>
+<td style="text-align: left;">791</td>
+<td style="text-align: left;">284</td>
+<td style="text-align: left;">261,342</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-11</td>
-<td style="text-align: left;">18,494</td>
-<td style="text-align: left;">12,345</td>
-<td style="text-align: left;">438</td>
-<td style="text-align: left;">637</td>
-<td style="text-align: left;">173,187</td>
+<td style="text-align: left;">2020-04-12</td>
+<td style="text-align: left;">19,895</td>
+<td style="text-align: left;">10,944</td>
+<td style="text-align: left;">461</td>
+<td style="text-align: left;">614</td>
+<td style="text-align: left;">185,497</td>
 </tr>
 </tbody>
 </table>
