--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-26</td>
+<td style="text-align: left;">31,528</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,094</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">345,182</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-25</td>
 <td style="text-align: left;">30,839</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">689</td>
 <td style="text-align: left;">1,075</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">19</td>
 <td style="text-align: left;">333,682</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-24</td>
-<td style="text-align: left;">30,533</td>
-<td style="text-align: left;">306</td>
-<td style="text-align: left;">1,066</td>
-<td style="text-align: left;">9</td>
-<td style="text-align: left;">319,619</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-19</td>
 <td style="text-align: left;">26,318</td>
-<td style="text-align: left;">4,521</td>
+<td style="text-align: left;">5,210</td>
 <td style="text-align: left;">791</td>
-<td style="text-align: left;">284</td>
+<td style="text-align: left;">303</td>
 <td style="text-align: left;">261,342</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-12</td>
 <td style="text-align: left;">19,895</td>
-<td style="text-align: left;">10,944</td>
+<td style="text-align: left;">11,633</td>
 <td style="text-align: left;">461</td>
-<td style="text-align: left;">614</td>
+<td style="text-align: left;">633</td>
 <td style="text-align: left;">185,497</td>
 </tr>
 </tbody>
