--- a/index.html
+++ b/index.html
@@ -58,77 +58,56 @@
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-19</td>
-<td style="text-align: left;">26,318</td>
-<td style="text-align: left;">5,210</td>
-<td style="text-align: left;">791</td>
-<td style="text-align: left;">303</td>
-<td style="text-align: left;">261,342</td>
+<td style="text-align: left;">26,000</td>
+<td style="text-align: left;">5,528</td>
+<td style="text-align: left;">781</td>
+<td style="text-align: left;">313</td>
+<td style="text-align: left;">256,698</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-12</td>
-<td style="text-align: left;">19,895</td>
-<td style="text-align: left;">11,633</td>
-<td style="text-align: left;">461</td>
-<td style="text-align: left;">633</td>
-<td style="text-align: left;">185,497</td>
+<td style="text-align: left;">19,347</td>
+<td style="text-align: left;">12,181</td>
+<td style="text-align: left;">452</td>
+<td style="text-align: left;">642</td>
+<td style="text-align: left;">183,214</td>
 </tr>
 </tbody>
 </table>
 <p>Parsed from the <a href="https://fdoh.maps.arcgis.com/apps/opsdashboard/index.html#/8d0de33f260d444c852a615dc7837c86">Florida’s COVID-19 Data and Surveillance Dashboard</a>.</p>
-<figure>
-<img src="plots/covid-19-florida-testing.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-total-positive.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-county-top-6.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-tests-per-case.png" />
-</figure>
+<p>Since Florida DOH only updates once per day at 11am (starting 2020-04-25), the daily reported cumulative count used is the last value reported prior to 1pm on a given day.</p>
+<p><img src="plots/covid-19-florida-testing.png" /></p>
+<p><img src="plots/covid-19-florida-total-positive.png" /></p>
+<p><img src="plots/covid-19-florida-county-top-6.png" /></p>
+<p><img src="plots/covid-19-florida-tests-per-case.png" /></p>
 <!-- ![](plots/covid-19-florida-change-new-cases.png) -->
-<figure>
-<img src="plots/covid-19-florida-tests-percent-positive.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-test-and-case-growth.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-daily-test-changes.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-age.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-age-deaths.png" />
-</figure>
-<figure>
-<img src="plots/covid-19-florida-age-sex.png" />
-</figure>
+<p><img src="plots/covid-19-florida-tests-percent-positive.png" /></p>
+<p><img src="plots/covid-19-florida-test-and-case-growth.png" /></p>
+<p><img src="plots/covid-19-florida-daily-test-changes.png" /></p>
+<p><img src="plots/covid-19-florida-age.png" /></p>
+<p><img src="plots/covid-19-florida-age-deaths.png" /></p>
+<p><img src="plots/covid-19-florida-age-sex.png" /></p>
 <h2 id="sources">Sources</h2>
 <ul>
 <li><p><a href="https://fdoh.maps.arcgis.com/apps/opsdashboard/index.html#/8d0de33f260d444c852a615dc7837c86">Florida’s COVID-19 Data and Surveillance Dashboard</a></p></li>
 <li><p><a href="http://www.floridahealth.gov/diseases-and-conditions/COVID-19/">Florida Department of Health COVID-19 status page</a></p></li>
 <li><p>PDF Reports released daily on <a href="http://www.floridahealth.gov/diseases-and-conditions/COVID-19/">Florida Disaster Covid-19</a></p></li>
 </ul>
-<p>The data structure and format of the released data changes frequently. I’m keeping track of the impact of these changes in this repo in <a href="NEWS.md" class="uri">NEWS.md</a>.</p>
+<p>The data structure and format of the released data changes frequently. I’m keeping track of the impact of these changes in this repo in <a href="NEWS.md">NEWS.md</a>.</p>
 <h2 id="fl-doh-dashboard">FL DOH Dashboard</h2>
 <p>One table is extracted from the <a href="https://fdoh.maps.arcgis.com/apps/opsdashboard/index.html#/8d0de33f260d444c852a615dc7837c86">Florida’s COVID-19 Data and Surveillance Dashboard</a>.</p>
 <ul>
-<li>Current test counts: <a href="data/covid-19-florida_dash_summary.csv" class="uri">data/covid-19-florida_dash_summary.csv</a></li>
+<li>Current test counts: <a href="data/covid-19-florida_dash_summary.csv">data/covid-19-florida_dash_summary.csv</a></li>
 </ul>
 <p>The <code>timestamp</code> column of indicates when the dashboard was polled for changes.</p>
 <p>Testing statistics prior to 2020-03-16 18:00:00 EDT were imported from <a href="https://covidtracking.com" class="uri">https://covidtracking.com</a>.</p>
-<figure>
-<img src="screenshots/fodh_maps_arcgis_com__apps__opsdashboard.png" />
-</figure>
+<p><img src="screenshots/fodh_maps_arcgis_com__apps__opsdashboard.png" /></p>
 <h2 id="snapshots-and-data-capture">Snapshots and Data Capture</h2>
 <p>Initially this repo gathered data from the <a href="http://www.floridahealth.gov/diseases-and-conditions/COVID-19/">Florida Department of Health COVID-19 status page</a>. This page has been <a href="screenshots/floridahealth_gov__diseases-and-conditions__COVID-19.png">reformatted several times</a> and the data structure changes frequently, so currently I am collecting snapshots of the webpage and not trying to parse these tables.</p>
-<p>I am also capturing a snapshot (HTML) and screenshot of the <a href="https://fdoh.maps.arcgis.com/apps/opsdashboard/index.html#/8d0de33f260d444c852a615dc7837c86">Florida’s COVID-19 Data and Surveillance Dashboard</a>. Data extracted from the dashboard are currently used for the current test count summaries, available in <a href="covid-19-florida-tests.csv" class="uri">covid-19-florida-tests.csv</a>.</p>
+<p>I am also capturing a snapshot (HTML) and screenshot of the <a href="https://fdoh.maps.arcgis.com/apps/opsdashboard/index.html#/8d0de33f260d444c852a615dc7837c86">Florida’s COVID-19 Data and Surveillance Dashboard</a>. Data extracted from the dashboard are currently used for the current test count summaries, available in <a href="covid-19-florida-tests.csv">covid-19-florida-tests.csv</a>.</p>
 <p>Prior to the afternoon of 2020-03-18, the dashboard reported county-level case counts. Around 4pm on 2020-03-18, the dashboard layout was modified, making these counts inaccessible. Similarly, prior to this update I was relying on the reported “last update time” listed in the dashboard, but since then I have been using the time at which the dashboard was checked for any time stamps from this source.</p>
-<p>On the same day that county-level data became inaccessible in the dashboard, FL DOH started releasing PDF reports, which I have begun to collect in <a href="pdfs/" class="uri">pdfs/</a>. The name of the report contains a time stamp, therefore I am periodically checking the FL DOH web page for the updated link. I’ve been able to extract most of the data from the PDF tables. Individual tables are stored in time stamped folders, using the time stamp in the PDF file name. The unified data files are available in <a href="data/" class="uri">data/</a> and prefixed with <code>covid-19-florida_pdf_</code>.</p>
+<p>On the same day that county-level data became inaccessible in the dashboard, FL DOH started releasing PDF reports, which I have begun to collect in <a href="pdfs/">pdfs/</a>. The name of the report contains a time stamp, therefore I am periodically checking the FL DOH web page for the updated link. I’ve been able to extract most of the data from the PDF tables. Individual tables are stored in time stamped folders, using the time stamp in the PDF file name. The unified data files are available in <a href="data/">data/</a> and prefixed with <code>covid-19-florida_pdf_</code>.</p>
 
 </main>
 
