--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-26</td>
 <td style="text-align: left;">31,528</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">345,182</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-25</td>
 <td style="text-align: left;">30,839</td>
 <td style="text-align: left;">689</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-19</td>
-<td style="text-align: left;">26,000</td>
-<td style="text-align: left;">5,528</td>
-<td style="text-align: left;">781</td>
-<td style="text-align: left;">313</td>
-<td style="text-align: left;">256,698</td>
+<td style="text-align: left;">2020-04-20</td>
+<td style="text-align: left;">26,664</td>
+<td style="text-align: left;">4,864</td>
+<td style="text-align: left;">806</td>
+<td style="text-align: left;">288</td>
+<td style="text-align: left;">266,853</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-12</td>
-<td style="text-align: left;">19,347</td>
-<td style="text-align: left;">12,181</td>
-<td style="text-align: left;">452</td>
-<td style="text-align: left;">642</td>
-<td style="text-align: left;">183,214</td>
+<td style="text-align: left;">2020-04-13</td>
+<td style="text-align: left;">20,601</td>
+<td style="text-align: left;">10,927</td>
+<td style="text-align: left;">483</td>
+<td style="text-align: left;">611</td>
+<td style="text-align: left;">196,819</td>
 </tr>
 </tbody>
 </table>
