--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-27</td>
+<td style="text-align: left;">32,138</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,108</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">357,028</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-26</td>
 <td style="text-align: left;">31,528</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">610</td>
 <td style="text-align: left;">1,094</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">14</td>
 <td style="text-align: left;">345,182</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-25</td>
-<td style="text-align: left;">30,839</td>
-<td style="text-align: left;">689</td>
-<td style="text-align: left;">1,075</td>
-<td style="text-align: left;">19</td>
-<td style="text-align: left;">333,682</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-20</td>
 <td style="text-align: left;">26,664</td>
-<td style="text-align: left;">4,864</td>
+<td style="text-align: left;">5,474</td>
 <td style="text-align: left;">806</td>
-<td style="text-align: left;">288</td>
+<td style="text-align: left;">302</td>
 <td style="text-align: left;">266,853</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-13</td>
 <td style="text-align: left;">20,601</td>
-<td style="text-align: left;">10,927</td>
+<td style="text-align: left;">11,537</td>
 <td style="text-align: left;">483</td>
-<td style="text-align: left;">611</td>
+<td style="text-align: left;">625</td>
 <td style="text-align: left;">196,819</td>
 </tr>
 </tbody>
