--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-27</td>
 <td style="text-align: left;">32,138</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">357,028</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-26</td>
 <td style="text-align: left;">31,528</td>
 <td style="text-align: left;">610</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-20</td>
-<td style="text-align: left;">26,664</td>
-<td style="text-align: left;">5,474</td>
-<td style="text-align: left;">806</td>
-<td style="text-align: left;">302</td>
-<td style="text-align: left;">266,853</td>
+<td style="text-align: left;">2020-04-21</td>
+<td style="text-align: left;">27,495</td>
+<td style="text-align: left;">4,643</td>
+<td style="text-align: left;">856</td>
+<td style="text-align: left;">252</td>
+<td style="text-align: left;">277,685</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-13</td>
-<td style="text-align: left;">20,601</td>
-<td style="text-align: left;">11,537</td>
-<td style="text-align: left;">483</td>
-<td style="text-align: left;">625</td>
-<td style="text-align: left;">196,819</td>
+<td style="text-align: left;">2020-04-14</td>
+<td style="text-align: left;">21,376</td>
+<td style="text-align: left;">10,762</td>
+<td style="text-align: left;">537</td>
+<td style="text-align: left;">571</td>
+<td style="text-align: left;">204,138</td>
 </tr>
 </tbody>
 </table>
