--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-28</td>
+<td style="text-align: left;">32,846</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,191</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">367,435</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-27</td>
 <td style="text-align: left;">32,138</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">708</td>
 <td style="text-align: left;">1,108</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">83</td>
 <td style="text-align: left;">357,028</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-26</td>
-<td style="text-align: left;">31,528</td>
-<td style="text-align: left;">610</td>
-<td style="text-align: left;">1,094</td>
-<td style="text-align: left;">14</td>
-<td style="text-align: left;">345,182</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-21</td>
 <td style="text-align: left;">27,495</td>
-<td style="text-align: left;">4,643</td>
+<td style="text-align: left;">5,351</td>
 <td style="text-align: left;">856</td>
-<td style="text-align: left;">252</td>
+<td style="text-align: left;">335</td>
 <td style="text-align: left;">277,685</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-14</td>
 <td style="text-align: left;">21,376</td>
-<td style="text-align: left;">10,762</td>
+<td style="text-align: left;">11,470</td>
 <td style="text-align: left;">537</td>
-<td style="text-align: left;">571</td>
+<td style="text-align: left;">654</td>
 <td style="text-align: left;">204,138</td>
 </tr>
 </tbody>
