--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-28</td>
 <td style="text-align: left;">32,846</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">367,435</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-27</td>
 <td style="text-align: left;">32,138</td>
 <td style="text-align: left;">708</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-21</td>
-<td style="text-align: left;">27,495</td>
-<td style="text-align: left;">5,351</td>
-<td style="text-align: left;">856</td>
-<td style="text-align: left;">335</td>
-<td style="text-align: left;">277,685</td>
+<td style="text-align: left;">2020-04-22</td>
+<td style="text-align: left;">27,869</td>
+<td style="text-align: left;">4,977</td>
+<td style="text-align: left;">884</td>
+<td style="text-align: left;">307</td>
+<td style="text-align: left;">282,942</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-14</td>
-<td style="text-align: left;">21,376</td>
-<td style="text-align: left;">11,470</td>
-<td style="text-align: left;">537</td>
-<td style="text-align: left;">654</td>
-<td style="text-align: left;">204,138</td>
+<td style="text-align: left;">2020-04-15</td>
+<td style="text-align: left;">22,096</td>
+<td style="text-align: left;">10,750</td>
+<td style="text-align: left;">604</td>
+<td style="text-align: left;">587</td>
+<td style="text-align: left;">211,244</td>
 </tr>
 </tbody>
 </table>
