--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-29</td>
+<td style="text-align: left;">33,192</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,240</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">374,048</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-28</td>
 <td style="text-align: left;">32,846</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">346</td>
 <td style="text-align: left;">1,191</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">49</td>
 <td style="text-align: left;">367,435</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-27</td>
-<td style="text-align: left;">32,138</td>
-<td style="text-align: left;">708</td>
-<td style="text-align: left;">1,108</td>
-<td style="text-align: left;">83</td>
-<td style="text-align: left;">357,028</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-22</td>
 <td style="text-align: left;">27,869</td>
-<td style="text-align: left;">4,977</td>
+<td style="text-align: left;">5,323</td>
 <td style="text-align: left;">884</td>
-<td style="text-align: left;">307</td>
+<td style="text-align: left;">356</td>
 <td style="text-align: left;">282,942</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-15</td>
 <td style="text-align: left;">22,096</td>
-<td style="text-align: left;">10,750</td>
+<td style="text-align: left;">11,096</td>
 <td style="text-align: left;">604</td>
-<td style="text-align: left;">587</td>
+<td style="text-align: left;">636</td>
 <td style="text-align: left;">211,244</td>
 </tr>
 </tbody>
