--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-29</td>
 <td style="text-align: left;">33,192</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">374,048</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-28</td>
 <td style="text-align: left;">32,846</td>
 <td style="text-align: left;">346</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-22</td>
-<td style="text-align: left;">27,869</td>
-<td style="text-align: left;">5,323</td>
-<td style="text-align: left;">884</td>
-<td style="text-align: left;">356</td>
-<td style="text-align: left;">282,942</td>
+<td style="text-align: left;">2020-04-23</td>
+<td style="text-align: left;">28,832</td>
+<td style="text-align: left;">4,360</td>
+<td style="text-align: left;">979</td>
+<td style="text-align: left;">261</td>
+<td style="text-align: left;">297,286</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-15</td>
-<td style="text-align: left;">22,096</td>
-<td style="text-align: left;">11,096</td>
-<td style="text-align: left;">604</td>
-<td style="text-align: left;">636</td>
-<td style="text-align: left;">211,244</td>
+<td style="text-align: left;">2020-04-16</td>
+<td style="text-align: left;">22,906</td>
+<td style="text-align: left;">10,286</td>
+<td style="text-align: left;">646</td>
+<td style="text-align: left;">594</td>
+<td style="text-align: left;">219,567</td>
 </tr>
 </tbody>
 </table>
