--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-04-30</td>
+<td style="text-align: left;">33,690</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,290</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">382,966</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-29</td>
 <td style="text-align: left;">33,192</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">498</td>
 <td style="text-align: left;">1,240</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">50</td>
 <td style="text-align: left;">374,048</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-28</td>
-<td style="text-align: left;">32,846</td>
-<td style="text-align: left;">346</td>
-<td style="text-align: left;">1,191</td>
-<td style="text-align: left;">49</td>
-<td style="text-align: left;">367,435</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-23</td>
 <td style="text-align: left;">28,832</td>
-<td style="text-align: left;">4,360</td>
+<td style="text-align: left;">4,858</td>
 <td style="text-align: left;">979</td>
-<td style="text-align: left;">261</td>
+<td style="text-align: left;">311</td>
 <td style="text-align: left;">297,286</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-16</td>
 <td style="text-align: left;">22,906</td>
-<td style="text-align: left;">10,286</td>
+<td style="text-align: left;">10,784</td>
 <td style="text-align: left;">646</td>
-<td style="text-align: left;">594</td>
+<td style="text-align: left;">644</td>
 <td style="text-align: left;">219,567</td>
 </tr>
 </tbody>
