--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-30</td>
 <td style="text-align: left;">33,690</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">382,966</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-04-29</td>
 <td style="text-align: left;">33,192</td>
 <td style="text-align: left;">498</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-23</td>
-<td style="text-align: left;">28,832</td>
-<td style="text-align: left;">4,858</td>
-<td style="text-align: left;">979</td>
-<td style="text-align: left;">311</td>
-<td style="text-align: left;">297,286</td>
+<td style="text-align: left;">2020-04-24</td>
+<td style="text-align: left;">30,174</td>
+<td style="text-align: left;">3,516</td>
+<td style="text-align: left;">1,031</td>
+<td style="text-align: left;">259</td>
+<td style="text-align: left;">317,540</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-16</td>
-<td style="text-align: left;">22,906</td>
-<td style="text-align: left;">10,784</td>
-<td style="text-align: left;">646</td>
-<td style="text-align: left;">644</td>
-<td style="text-align: left;">219,567</td>
+<td style="text-align: left;">2020-04-17</td>
+<td style="text-align: left;">24,122</td>
+<td style="text-align: left;">9,568</td>
+<td style="text-align: left;">699</td>
+<td style="text-align: left;">591</td>
+<td style="text-align: left;">235,218</td>
 </tr>
 </tbody>
 </table>
