--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-05-01</td>
+<td style="text-align: left;">34,728</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,337</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">403,260</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-04-30</td>
 <td style="text-align: left;">33,690</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,038</td>
 <td style="text-align: left;">1,290</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">47</td>
 <td style="text-align: left;">382,966</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-04-29</td>
-<td style="text-align: left;">33,192</td>
-<td style="text-align: left;">498</td>
-<td style="text-align: left;">1,240</td>
-<td style="text-align: left;">50</td>
-<td style="text-align: left;">374,048</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-24</td>
 <td style="text-align: left;">30,174</td>
-<td style="text-align: left;">3,516</td>
+<td style="text-align: left;">4,554</td>
 <td style="text-align: left;">1,031</td>
-<td style="text-align: left;">259</td>
+<td style="text-align: left;">306</td>
 <td style="text-align: left;">317,540</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-17</td>
 <td style="text-align: left;">24,122</td>
-<td style="text-align: left;">9,568</td>
+<td style="text-align: left;">10,606</td>
 <td style="text-align: left;">699</td>
-<td style="text-align: left;">591</td>
+<td style="text-align: left;">638</td>
 <td style="text-align: left;">235,218</td>
 </tr>
 </tbody>
