--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-05-05</td>
+<td style="text-align: left;">37,439</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,536</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">466,288</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-04</td>
 <td style="text-align: left;">36,897</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">542</td>
 <td style="text-align: left;">1,423</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">113</td>
 <td style="text-align: left;">444,814</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-05-03</td>
-<td style="text-align: left;">36,078</td>
-<td style="text-align: left;">819</td>
-<td style="text-align: left;">1,403</td>
-<td style="text-align: left;">20</td>
-<td style="text-align: left;">428,744</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-28</td>
 <td style="text-align: left;">32,846</td>
-<td style="text-align: left;">4,051</td>
+<td style="text-align: left;">4,593</td>
 <td style="text-align: left;">1,191</td>
-<td style="text-align: left;">232</td>
+<td style="text-align: left;">345</td>
 <td style="text-align: left;">367,435</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-21</td>
 <td style="text-align: left;">27,495</td>
-<td style="text-align: left;">9,402</td>
+<td style="text-align: left;">9,944</td>
 <td style="text-align: left;">856</td>
-<td style="text-align: left;">567</td>
+<td style="text-align: left;">680</td>
 <td style="text-align: left;">277,685</td>
 </tr>
 </tbody>
