--- a/index.html
+++ b/index.html
@@ -38,39 +38,39 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td style="text-align: left;">Today</td>
+<td style="text-align: left;">2020-05-06</td>
+<td style="text-align: left;">38,002</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">1,605</td>
+<td style="text-align: left;">0</td>
+<td style="text-align: left;">480,654</td>
+</tr>
+<tr class="even">
 <td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-05</td>
 <td style="text-align: left;">37,439</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">563</td>
 <td style="text-align: left;">1,536</td>
-<td style="text-align: left;">0</td>
+<td style="text-align: left;">69</td>
 <td style="text-align: left;">466,288</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">The Day Before</td>
-<td style="text-align: left;">2020-05-04</td>
-<td style="text-align: left;">36,897</td>
-<td style="text-align: left;">542</td>
-<td style="text-align: left;">1,423</td>
-<td style="text-align: left;">113</td>
-<td style="text-align: left;">444,814</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
 <td style="text-align: left;">2020-04-29</td>
 <td style="text-align: left;">33,192</td>
-<td style="text-align: left;">4,247</td>
+<td style="text-align: left;">4,810</td>
 <td style="text-align: left;">1,240</td>
-<td style="text-align: left;">296</td>
+<td style="text-align: left;">365</td>
 <td style="text-align: left;">374,048</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
 <td style="text-align: left;">2020-04-22</td>
 <td style="text-align: left;">27,869</td>
-<td style="text-align: left;">9,570</td>
+<td style="text-align: left;">10,133</td>
 <td style="text-align: left;">884</td>
-<td style="text-align: left;">652</td>
+<td style="text-align: left;">721</td>
 <td style="text-align: left;">282,942</td>
 </tr>
 </tbody>
