--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Today</td>
+<td style="text-align: left;">Yesterday</td>
 <td style="text-align: left;">2020-05-06</td>
 <td style="text-align: left;">38,002</td>
 <td style="text-align: left;">0</td>
@@ -47,7 +47,7 @@
 <td style="text-align: left;">480,654</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Yesterday</td>
+<td style="text-align: left;">The Day Before</td>
 <td style="text-align: left;">2020-05-05</td>
 <td style="text-align: left;">37,439</td>
 <td style="text-align: left;">563</td>
@@ -57,21 +57,21 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">Last Week</td>
-<td style="text-align: left;">2020-04-29</td>
-<td style="text-align: left;">33,192</td>
-<td style="text-align: left;">4,810</td>
-<td style="text-align: left;">1,240</td>
-<td style="text-align: left;">365</td>
-<td style="text-align: left;">374,048</td>
+<td style="text-align: left;">2020-04-30</td>
+<td style="text-align: left;">33,690</td>
+<td style="text-align: left;">4,312</td>
+<td style="text-align: left;">1,290</td>
+<td style="text-align: left;">315</td>
+<td style="text-align: left;">382,966</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2 Weeks Ago</td>
-<td style="text-align: left;">2020-04-22</td>
-<td style="text-align: left;">27,869</td>
-<td style="text-align: left;">10,133</td>
-<td style="text-align: left;">884</td>
-<td style="text-align: left;">721</td>
-<td style="text-align: left;">282,942</td>
+<td style="text-align: left;">2020-04-23</td>
+<td style="text-align: left;">28,832</td>
+<td style="text-align: left;">9,170</td>
+<td style="text-align: left;">979</td>
+<td style="text-align: left;">626</td>
+<td style="text-align: left;">297,286</td>
 </tr>
 </tbody>
 </table>
